added double points

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         <h4 class="">
           Team 1 score: <span id="team1score">0</span>
           <button class="btn btn-info" onclick="increaseScore('team1')">Score!</button>
+          <button class="btn btn-info" onclick="timesTwo('team1')">Double Prizes!</button>
         </h4>
       </div>
       <h4 class="col-12 col-md-6  d-flex justify-content-center mt-3">
         <div>
           Team 2 score: <span id="team2score">0</span>
           <button class="btn btn-info" onclick="increaseScore('team2')">Score!</button>
+          <button class="btn btn-info" onclick="timesTwo('team2')">Double Prizes!</button>
         </div>
       </h4>
     </div>
